Добавить учет таймзоны пользователя (#103)
* feat: Прокинуть таймзону пользователя и рассчитывать дату пользователя при: добавлении события, получении плана на сегодня, плана на завтра и очистки прошлых событий при messageId=0

* feat: Поправить текущие тесты

* feat: Добавить тест для добавления события при различных таймзонах

* feat: Добавить тест для получения события на завтра в различных таймзонах

* feat: Добавить тест для получения события на сегодня в различных таймзонах

* feat: Упростить providerUnknownTest

* feat: Добавить тесты для проверки удаления устраревших событий для разных таймзон

* feat: Дополнить README.md